Basic Info form fleshed out with most compaonents added and minor formatting changes in css.

--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@ body {
 }
 
 
-user-signup fieldset{
+form fieldset{
   margin-top:15px;
   width:30%;
   display:inline;
   vertical-align: top;
+}
+
+form label {
+  display:block;
+
 }
