Epic mode  additions added. Formatting seems correct.

--- a/style.css
+++ b/style.css
@@ -48,7 +48,14 @@ textarea:focus{
   border:1px solid rgb(155, 200, 238);
   box-shadow: 0 0 10px rgb(155, 200, 238);
 }
+textarea:invalid{
+  background-color: rgb(255, 255, 255);
 
+}
+textarea:valid{
+  background-color: rgb(221, 255, 221);
+
+}
 input {
   padding:0;
   width:100%;
@@ -60,60 +67,29 @@ input:focus {
    box-shadow: 0 0 10px rgb(155, 200, 238);
 }
 
-
-
-
-
-
-
-
-/*body {
-  width:1366px;
-  margin:auto;
-}
-
-form {
-  display:inline;
-}
-form fieldset{
-  margin-top:15px;
-  width:30%;
-  display:inline-block;
-  vertical-align: top;
-}
-
-form label {
-  display:block;
+input:invalid{
+  background-color: rgb(255, 255, 255);
 
 }
-
-
-button {
-  float:left;
-  background-color: rgb(155, 200, 238);
-  border-radius: 5px;
-  padding:2px;
+input:valid {
+  background-color: rgb(221, 255, 221);
 }
 
-
-.check-rad {
-  display: inline;
-}
-
-aside {
-  margin-top:15px;
-}
-aside h4 {
-  margin:0;
-}
-
-
-textarea {
-  padding:0;
-}
-
-input {
-  padding:0;
+select:invalid{
+  background-color: rgb(255, 255, 255);
 
 }
-*/
+select:valid {
+  background-color: rgb(221, 255, 221);
+}
+#number-levitate {
+  width:3em;
+}
+
+#app-date {
+  width:15em;
+}
+
+#password {
+  width:15em;
+}
