Corrections made to homework assignment based on notes.

--- a/style.css
+++ b/style.css
@@ -1,90 +1,82 @@
 
 body {
-
   margin:0;
 }
 
 form {
   width:95%;
   margin-left:20px;
-}
+  }
+
 form fieldset{
   margin-top:15px;
   width:30%;
   display:inline;
   vertical-align: top;
-}
+  }
 
 form label {
   display:block;
-}
-
-
+  }
 
 aside {
   margin-top:15px;
-}
- aside .check-rad {
-  display: inline-block;
-  font-size:1.25em;
+  }
 
-}
+aside .check-rad {
+  display: inline-block;
+  }
 
 .check-rad input {
   width:auto;
   padding-right:1em;
-}
+  }
 
 aside h4 {
   margin:0;
-}
+  }
 
 textarea {
   width:100%;
   padding:0;
   border:1px solid rgb(00, 00, 00);
-}
+  height:12em;
+  }
 
 textarea:focus{
   outline: none;
   box-shadow: 0 0 10px rgb(155, 200, 238);
-}
-textarea:invalid{
-  background-color: rgb(255, 255, 255);
-
-}
-textarea:valid{
-  /*background-color: rgb(221, 255, 221);*/
-  background-color: white;
+  }
 
 
-}
+
 select {
   padding:0;
   border:1px solid rgb(00, 00, 00);
-}
+  }
+
 input {
   border:1px solid rgb(00, 00, 00);
   width:100%;
-}
+  border-radius:4px;
+  }
 
 .levitate {
   border:1px solid rgb(00, 00, 00);
-}
+  width:3em;
+ }
 .profile-pic {
-  background-color: grey;
   width:auto;
-  border:none;
-}
-input:focus {
-   outline: none;
-   border:1px solid rgb(155, 200, 238);
-   box-shadow: 0 0 10px rgb(155, 200, 238);
-}
+  border: none;
+ }
 
-input:invalid{
-  background-color: rgb(255, 255, 255);
-}
+
+input:focus {
+  outline: none;
+  border:1px solid rgb(155, 200, 238);
+  box-shadow: 0 0 10px rgb(155, 200, 238);
+  }
+
 
 .res-sub input {
   display: inline;
@@ -92,31 +84,29 @@ input:invalid{
   padding:2px;
   background-color: lightblue;
   width:auto;
-}
+  }
+
+.password {
+  width:15em;
+  }
+
+.date {
+  width:15em;
+  }
+
+
 
 
 /*
-input:valid {
-  background-color: rgb(221, 255, 221);
-}
-
-select:invalid{
+input:invalid{
   background-color: rgb(255, 255, 255);
-}
+  }
 
-select:valid {
+textarea:invalid{
+  background-color: rgb(255, 255, 255);
+  }
+
+textarea:valid{
   background-color: rgb(221, 255, 221);
-}
-*/
-
-#number-levitate {
-  width:3em;
-}
-
-#app-date {
-  width:15em;
-}
-
-#password {
-  width:15em;
-}
+  }
+  */
